apps/elk/auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: elk-auth
  namespace: elk
spec:
  basicAuth:
    secret: elk-basic-auth
